[package]
name = "rusty-import"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "2.0.0-rc.3", features = ["derive"] }
bytes = "1.4.0"
mysql = { version = "24.0.0", default-features = false, features = ["default-rustls"] }
regex = "1.8.4"
tempfile = "3.6.0"
zstd = "0.12.3"
